--- a/conf.yaml
+++ b/conf.yaml
@@ -3,14 +3,15 @@ STUDY_NAME : "Wendsday"
 
 competencia01:
   DATA_PATH: "data/competencia_01.csv"
-  SEMILLA: [143287, 146213, 310111, 670627, 880553]
-  MES_TRAIN : "202102"
-  MES_VAL : "202103"
-  MES_TEST : "202104"
+  SEMILLA: 143287
+  MES_TRAIN : 202102
+  MES_VAL : 202103
+  MES_TEST : 202104
   GANACIA_ACIERTO: 780000
   COSTO_ESTIMULO: -20000
   PARAM_CORTE: [6000,19000]
-  UNDERSUMPLING: 0.5
+  PARAM_PASO_CORTE: 500
+
 
 parametros_lgbm:
   boosting: "gbdt" # puede ir  dart  , ni pruebe random_forest
@@ -22,7 +23,7 @@ parametros_lgbm:
   force_row_wise: TRUE # para reducir warnings
   verbosity: -100
 
-  seed: SEMILLA
+  seed: 143287
   max_depth: -1 # -1 significa no limitar,  por ahora lo dejo fijo
   min_gain_to_split: 0 # min_gain_to_split >= 0
   min_sum_hessian_in_leaf: 0.001 #  min_sum_hessian_in_leaf >= 0.0
@@ -50,11 +51,14 @@ parametros_lgbm:
 
 
 hiperparam_bo:
+  UNDERSUMPLING: 0.1 # 0.0 < UNDERSUMPLING <= 1.0. De los continua,0.1 es el 10% del total de los continua.
+  VAL_FOLDS_BO: 5 # cantidad de folds para validacion cruzada en la busqueda de hiperparametros
+  N_TRIALS: 50 # cantidad de ensayos en la busqueda de hiper
   hs:
     num_iterations:
       type: integer
       lower: 2048
-      upper: 4096
+      upper: 2090
     learning_rate:
       type: float
       lower: 0.002
@@ -80,4 +84,3 @@ hiperparam_bo:
  #     type: float
  #     lower: 0
  #     upper: 10
-  iteraciones: 50
